Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/meth/VarargsWarn.out
VarargsWarn.java:15:32: compiler.warn.inexact.non-varargs.call: java.lang.Object, java.lang.Object[]
- compiler.err.warnings.and.werror
1 error
1 warning
